# atxserver2-android-provider

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  DEVELOP.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  WhatsInput_v1.0_apkpure.com.apk  asyncadb.py  build-docker-push.sh  device.py  device_names.py  heartbeat.py  install-adb.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  settings.py  tcpproxy.js  utils.py
.github/: ISSUE_TEMPLATE.md
core/: fetching.py  freeport.py  utils.py
