[project]
name = "atxserver2-android-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils==2.12.0",
    "apkutils2>=1.0.0",
    "humanize>=4.10.0",
    "logzero==1.5.*",
    "requests>=2.32.4",
    "retry>=0.9.2",
    "setuptools>=60.0.0,<70.0.0",
    "tornado>=6.4.2",
    "uiautomator2<3",
]
